Crash in [@ nsWindow::NativeMoveResizeWaylandPopup]
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | fixed |
firefox91 | --- | fixed |
People
(Reporter: gsvelto, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-release+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/cef85e28-653a-46c3-9dd1-9b2f70210604
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(IsInPopupHierarchy())
Top 10 frames of crashing thread:
0 libxul.so nsWindow::NativeMoveResizeWaylandPopup widget/gtk/nsWindow.cpp:2061
1 libxul.so nsWindow::NativeMove widget/gtk/nsWindow.cpp:2277
2 libxul.so nsWindow::Move widget/gtk/nsWindow.cpp:1260
3 libxul.so nsBaseWidget::MoveClient widget/nsBaseWidget.cpp:1499
4 libxul.so nsViewManager::ProcessPendingUpdatesForView view/nsViewManager.cpp:380
5 libxul.so nsViewManager::ProcessPendingUpdates view/nsViewManager.cpp:972
6 libxul.so nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2476
7 libxul.so mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:326
8 libxul.so mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:342
9 libxul.so mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver layout/base/nsRefreshDriver.cpp:704
The failing assertion was added in bug 1710436. Martin can you have a look please?
Reporter | ||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
Hm, the assertion here tests:
mPopupTrackInHierarchy && mWaylandToplevel && mWaylandPopupPrev
which means when popup is visible it should be in hierarchy and must have assigned parent window. I expect mPopupTrackInHierarchy is always true here so the popup was removed although is still visible.
Assignee | ||
Comment 3•3 years ago
|
||
I'd need more context or reproduction steps here. I wonder which popup causes that - if some extension panel or so. Would be great to run Firefox with
MOZ_LOG="WidgetPopup:5"
env variable and get the log.
Updated•3 years ago
|
Assignee | ||
Comment 5•3 years ago
|
||
- Don't remove popup from widget hierarchy on nsWindow::Destroy() but leave nsWindow::Show(false) do the job.
- Don't check popup widget visibility from Gtk as it's not reliable.
Updated•3 years ago
|
Assignee | ||
Comment 6•3 years ago
|
||
We'd need to backport this one to 90 to avoid crashes.
Comment 8•3 years ago
|
||
bugherder |
Comment 9•3 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 11•3 years ago
|
||
Comment on attachment 9226722 [details]
Bug 1715292 [Wayland] Update popup visibility and hierarchy handling, r?jhorak
Beta/Release Uplift Approval Request
- User impact if declined: Firefox crashes on Wayland when popup menus and tooltip are displayed.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): - Baked on nighly.
- Minor functionality changes (don't release tracked popups early but leave it to destructor)
- Don't assert when popups are not visible from Gtk perspective (that info is useless for us anyway).
- String changes made/needed:
Comment 12•3 years ago
|
||
To confirm, is this ok to uplift on its own despite the dependency mentioned in comment 4?
Assignee | ||
Comment 13•3 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #12)
To confirm, is this ok to uplift on its own despite the dependency mentioned in comment 4?
Yes, I checked it and it works without Bug 1661516. I expected there might be some overlap but it can be applied without it.
Comment 14•3 years ago
|
||
Comment on attachment 9226722 [details]
Bug 1715292 [Wayland] Update popup visibility and hierarchy handling, r?jhorak
approved for 90 rc1
Comment 15•3 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Description
•