Bug 1715292 [Wayland] Update popup visibility and hierarchy handling, r=jhorak

- Don't remove popup from widget hierarchy on nsWindow::Destroy() but leave nsWindow::Show(false) do the job.
- Don't check popup widget visibility from Gtk as it's not reliable.

Differential Revision: https://phabricator.services.mozilla.com/D117601